# libprintf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  minimake.sh
.github/workflows/: linux.yml  macos.yml  unittests.yml
inc/: ft_output.h  ft_printf.h  libprintf.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  ft_dprintf.c  ft_func_router.c  ft_output2.c  ft_printf.c  ft_snprintf.c  ft_vdprintf.c  ft_vsnprintf.c
src/conversion_types/: ft_ctype_char.c  ft_ctype_common_dec.c  ft_ctype_common_float.c  ft_ctype_float.c  ft_ctype_hexadecimal_uppercase_x.c  ft_ctype_hexadecimal_x.c  ft_ctype_octal.c  ft_ctype_output_count.c  ft_ctype_percentage.c  ft_ctype_pointer.c  ft_ctype_scientific_notation.c  ft_ctype_scientific_notation_or_full_float.c  ft_ctype_signed_dec.c  ft_ctype_string.c  ft_ctype_unsigned_dec.c
src/option_handlers/: ft_handle_flags1.c  ft_handle_flags2.c  ft_handle_size1.c  ft_handle_size2.c
src/output/: ft_output1.c
tests/: CMakeLists.txt  README.md
tests/src/: snprintf.cpp  test.cpp.template
